--- a/src/assets/Animation/Card.css
+++ b/src/assets/Animation/Card.css
@@ -1,17 +1,46 @@
-/* Add custom styles for 3D effect */
-.perspective {
-    perspective: 1000px;
-  }
-  
-  .backface-hidden {
-    backface-visibility: hidden;
-  }
-  
-  .rotate-y-180 {
-    transform: rotateY(180deg);
-  }
-  
-  .transform-style-preserve-3d {
-    transform-style: preserve-3d;
-  }
-  
+.card-container {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.card {
+  perspective: 1000px;
+}
+
+.content {
+  /* width: 350px; */
+  /* height: 400px; */
+  transform-style: preserve-3d;
+  transition: transform 0.6s ease;
+  position: relative;
+}
+
+.card:hover .content {
+  transform: rotateY(180deg);
+}
+
+.back, .front {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  box-sizing: border-box;
+  border-radius: 8px;
+}
+
+.back {
+  background-color: #333;
+  color: #fff;
+}
+
+.front {
+  background-color: #f5f5f5;
+  color: #333;
+  transform: rotateY(180deg);
+}
