--- a/src/assets/Animation/Skills.css
+++ b/src/assets/Animation/Skills.css
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 100%;
   }
   
   .items {
@@ -100,4 +100,5 @@
     transform: translateZ(calc(var(--index) * 10));
     margin: 0 .45vw;
   }
+  
   
